--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
@@ -70,15 +70,18 @@
 
 .table-content {
   margin-bottom: 0;
-
   .table {
     margin-bottom: 0;
-
+    border-collapse: collapse;
+    table-layout: fixed;
     thead {
       font-size: 17px;
       border-top: 0.8px solid #eef0f3;
       tr {
         th {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           border-bottom: none;
           background-color: #f8f9fa;
           font-weight: 600;
@@ -93,8 +96,38 @@
     }
 
     td {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
       font-size: 15px;
       border: none;
+    }
+
+    th:first-child, td:first-child {
+      width: 30%;
+    }
+
+    th:nth-child(2), td:nth-child(2) {
+      width: 15%;
+    }
+
+    th:nth-child(3), td:nth-child(3) {
+      width: 14%;
+    }
+
+    th:nth-child(4), td:nth-child(4) {
+      width: 9%;
+    }
+
+    th:nth-child(5), td:nth-child(5) {
+      width: 9%;
+    }
+
+    th:nth-child(6), td:nth-child(6) {
+      width: 18%;
+    }
+    th:last-child, td:last-child {
+      width: 5%;
     }
   }
 }
@@ -107,7 +140,7 @@
   background-color: white;
   border-radius: 0 0 8px 8px;
   select {
-    margin-top: 10px;
+    margin-top: 8px;
 
     option {
       font-size: 20px;
@@ -123,6 +156,7 @@
     width: auto !important;
     display: flex;
     font-size: 20px;
+    margin-bottom: 20px !important;
     .small-screen {
       display: none;
     }
@@ -162,3 +196,8 @@
   }
 }
 
+.reset-button{
+  background-color: white;
+  color: $primary;
+  border: 1px solid $primary;
+}
