--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.scss
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.scss
@@ -115,7 +115,7 @@
   background-color: white;
   border-radius: 0 0 8px 8px;
   select {
-    margin-top: 10px;
+    margin-top: 8px;
     option {
       font-size: 20px;
       background-color: white !important;
@@ -130,6 +130,7 @@
     width: auto !important;
     display: flex;
     font-size: 20px;
+    margin-bottom: 20px !important;
     .small-screen {
       display: none;
     }
