--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -2,7 +2,7 @@
 <p-toast key="error" position="top-right"></p-toast>
 <h2>Tra cứu kế hoạch thực hiện</h2>
 <div class="table-container">
-  <div class="my-4 advance-search container d-flex flex-row justify-content-between">
+  <div class="my-4 row advance-search container d-flex flex-row justify-content-between">
     <div class="form-group col-md-4" *ngIf="!advanceSearch">
       <input type="text"
              name="globalSearch"
@@ -56,6 +56,12 @@
           </mat-form-field>
         </div>
       </div>
+    </div>
+    <div class="text-end justify-content-end"
+         [ngClass]="{'col-md-2 d-flex align-items-center': advanceSearch, 'col-md-3 ': !advanceSearch}">
+      <button (click)="onAdvanceSearch()" pButton>{{advanceSearchButtonText}}</button>
+    </div>
+    <div *ngIf="advanceSearch" class="col-md-10 mt-2">
       <div class="row">
         <div class="col-md-4">
           <p-dropdown
@@ -117,15 +123,15 @@
         </div>
       </div>
     </div>
-    <div class="text-end" [ngClass]="{'col-md-2': advanceSearch, 'col-md-3 ': !advanceSearch}">
-      <button (click)="onAdvanceSearch()" pButton>{{advanceSearchButtonText}}</button>
+    <div *ngIf="advanceSearch" class="d-flex justify-content-end align-items-center col-md-2">
+      <button pButton class="reset-button" (click)="reset()">Reset</button>
     </div>
   </div>
   <div class="table-content">
     <table class="table p-2 table-hover align-middle">
       <thead>
       <tr>
-        <th (click)="onSort('initiationPlanName')" >
+        <th (click)="onSort('initiationPlanName')">
           <div class="header-container">
             <span class="icon-text">Tên kế hoạch</span>
             <i class="bi bi-sort-up" *ngIf="sortBy === 'initiationPlanName' && sortDirection === 'asc'"></i>
@@ -176,9 +182,9 @@
       <span *ngIf="totalElements == 0">Không tìm thấy bản ghi nào phù hợp</span>
 
       </thead>
-        <tbody *ngIf="schoolInitPlans && schoolInitPlans.length > 0" class="px-2">
-        <tr
-          *ngFor="
+      <tbody *ngIf="schoolInitPlans && schoolInitPlans.length > 0" class="px-2">
+      <tr
+        *ngFor="
           let plan of schoolInitPlans
             | paginate
               : {
@@ -188,22 +194,23 @@
                 };
           let i = index
         "
-        >
-          <td class="py-3 px-2" style="width: 32%">{{ plan.initiationPlanName }}</td>
-          <td class="py-3 px-2" style="width: 16%">{{ plan.issueName }}</td>
-          <td class="py-3 px-2" style="width: 16%">{{ plan.schoolName }}</td>
-          <td class="py-3 px-2" style="width: 9%"> {{ plan.createdDate  | date : "dd/MM/yyyy" }}</td>
-          <td class="py-3 px-2" style="width: 9%">{{ plan.deadline | date : "dd/MM/yyyy" }}</td>
-          <td class="py-3 px-2" style="width: 18%">
-              <p-tag [severity]="getStatusSeverity(plan?.status?.statusId)" [value]="plan.statusName"></p-tag>
-          </td>
-          <td class="py-3 px-2">
-            <button class="action-button" type="button" (click)="onDetail(plan.initiationPlanId)">
-              <i class="bi bi-info-circle-fill"></i>
-            </button>
-          </td>
-        </tr>
-        </tbody>
+      >
+        <td class="py-4 px-2" pTooltip="{{plan.initiationPlanName}}"
+            tooltipPosition="top">{{ plan.initiationPlanName }}</td>
+        <td class="py-4 px-2" pTooltip="{{plan.issueName}}" tooltipPosition="top">{{ plan.issueName }}</td>
+        <td class="py-4 px-2" pTooltip="{{plan.schoolName}}" tooltipPosition="top">{{ plan.schoolName }}</td>
+        <td class="py-4 px-2"> {{ plan.createdDate  | date : "dd/MM/yyyy" }}</td>
+        <td class="py-4 px-2">{{ plan.deadline | date : "dd/MM/yyyy" }}</td>
+        <td class="py-4 px-2">
+          <p-tag [severity]="getStatusSeverity(plan?.status?.statusId)" [value]="plan.statusName"></p-tag>
+        </td>
+        <td class="py-3 px-2">
+          <button class="action-button" type="button" (click)="onDetail(plan.initiationPlanId)">
+            <i class="bi bi-info-circle-fill"></i>
+          </button>
+        </td>
+      </tr>
+      </tbody>
     </table>
     <div class="d-flex justify-content-center table-footer">
       <div class="me-3 mt-3" *ngIf="schoolInitPlans && schoolInitPlans.length > 0">
