Add text overflow inspection plan list

--- a/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
@@ -85,7 +85,7 @@
     <div *ngIf="advanceSearch" class="d-flex justify-content-end align-items-center col-md-2">
       <button pButton class="reset-button" (click)="reset()">Reset</button>
     </div>
-    <div class="col-md-12 d-flex flex-row justify-content-end align-items-center">
+    <div class="col-md-12 d-flex flex-row justify-content-end align-items-center mt-2">
       <button pButton (click)="onCreateGuidanceDocument()" *ngIf="isDirector||isViceDirector">Tạo mới</button>
     </div>
   </div>
