--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.scss
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.scss
@@ -71,22 +71,24 @@
   border: 0.8px solid #d2d2d2;
   border-radius: 8px;
   background-color: #f8f9fa;
-
   .advance-search {
   }
 }
 
 .table-content {
   margin-bottom: 0;
-
   .table {
     margin-bottom: 0;
-
+    border-collapse: collapse;
+    table-layout: fixed;
     thead {
       font-size: 17px;
       border-top: 0.8px solid #eef0f3;
       tr {
         th {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           border-bottom: none;
           background-color: #f8f9fa;
           font-weight: 600;
@@ -101,8 +103,39 @@
     }
 
     td {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
       font-size: 15px;
       border: none;
+    }
+
+    th:first-child, td:first-child {
+      width: 27%;
+    }
+
+    th:nth-child(2), td:nth-child(2) {
+      width: 15%;
+    }
+
+    th:nth-child(3), td:nth-child(3) {
+      width: 15%;
+    }
+
+    th:nth-child(4), td:nth-child(4) {
+      width: 13%;
+    }
+
+    th:nth-child(5), td:nth-child(5) {
+      width: 11%;
+    }
+
+    th:nth-child(6), td:nth-child(6) {
+      width: 13%;
+    }
+
+    th:last-child, td:last-child {
+      width: 5%;
     }
   }
 }
@@ -170,3 +203,8 @@
   }
 }
 
+.reset-button{
+  background-color: white;
+  color: $primary;
+  border: 1px solid $primary;
+}
