--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -123,7 +123,7 @@
         </div>
       </div>
     </div>
-    <div *ngIf="advanceSearch" class="d-flex justify-content-end align-items-center col-md-2">
+    <div *ngIf="advanceSearch" class="d-flex justify-content-end align-items-end col-md-2">
       <button pButton class="reset-button" (click)="reset()">Reset</button>
     </div>
   </div>
