--- a/src/app/features/post-login/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue-list/issue-list.component.html
@@ -10,7 +10,7 @@
       [showCurrentPageReport]="true"
       [rowsPerPageOptions]="[5, 10, 15]"
       [paginator]="true"
-      currentPageReportTemplate="Hiển thị {first} đến {last} trong số {totalRecords} bản ghi"
+      currentPageReportTemplate="Hiển thị từ {first} tới {last} trên tổng {totalRecords} bản ghi"
       [filterDelay]="0"
       [globalFilterFields]="['issueName', 'account.user.fullName']"
     >
