--- a/src/app/features/post-login/school-list/school-list.component.html
+++ b/src/app/features/post-login/school-list/school-list.component.html
@@ -37,7 +37,7 @@
     dataKey="schoolId"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem', 'min-height': '150px' }"
-    currentPageReportTemplate="Hiện từ {first} đến {last} trong tổng {totalRecords} bản ghi"
+    currentPageReportTemplate="Hiển thị từ {first} tới {last} trên tổng {totalRecords} bản ghi"
     [rowsPerPageOptions]="[5, 10, 20]"
     [globalFilterFields]="['schoolId', 'schoolName', 'exactAddress']"
     [(selection)]="selectedSchool"
