--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
@@ -5,19 +5,23 @@
 }
 
 .th-small {
-  width: 100px;
+  width: 200px;
 }
 
 .action-button {
   button {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     border: none;
     background: $primary;
-
+    transition: all 0.5s ease;
     i {
       color: white;
+    }
+    &:hover {
+      background-color: $primary-hover;
+      // border-color: $primary-hover;
     }
   }
 }
@@ -42,7 +46,8 @@
   }
 }
 
-.create-button, .complete-button {
+.create-button,
+.complete-button {
   width: auto;
   background-color: $primary;
   border-radius: 8px;
@@ -71,4 +76,49 @@
 .disabled-action-button {
   cursor: not-allowed;
   opacity: 0.35;
+}
+:host ::ng-deep {
+  .th-id {
+    width: 80px;
+  }
+  // for icon sort
+  .p-highlight {
+    .p-sortable-column-icon {
+      color: $primary;
+    }
+  }
+  // for active th
+  .p-highlight {
+    div {
+      color: $primary;
+    }
+    .p-dropdown-item {
+      color: white;
+    }
+  }
+  // FILTER ICON
+  .p-column-filter-menu-button-active {
+    border-radius: 50%;
+    // background-color: #cfd3ff;
+    background-color: $primary;
+    color: #fff;
+  }
+  .p-column-filter-clear-button,
+  .p-column-filter-menu-button {
+    border-radius: 50%;
+  }
+  .p-paginator .p-paginator-pages .p-paginator-page {
+    border-radius: 50%;
+    &.p-highlight {
+      background-color: $primary-hover !important;
+      color: #fff !important;
+    }
+  }
+  table {
+    table-layout: fixed;
+    width: 100%;
+  }
+}
+.search-input {
+  width: 400px;
 }
