--- a/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
+++ b/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
@@ -3,93 +3,150 @@
   [canDeleteDocument]="true"
   [recordId]="recordId"
   [detailRecordPopupVisible]="detailRecordPopupVisible"
-  (detailRecordPopupVisibleChange)="changeDetailRecordVisible()">
+  (detailRecordPopupVisibleChange)="changeDetailRecordVisible()"
+>
 </app-record-detail>
 <div class="container-fluid">
-  <p-table
-    #dt
-    *ngIf="taskList"
-    [value]="taskList"
-    dataKey="taskId"
-    [rowHover]="true"
-    [rows]="5"
-    [showCurrentPageReport]="true"
-    [paginator]="true"
-    currentPageReportTemplate="Hiển thị từ {first} tới {last} trên tổng {totalRecords} bản ghi"
-    [filterDelay]="0"
-    [globalFilterFields]="['name', 'role', 'school']"
-  >
-    <ng-template pTemplate="caption">
-      <div class="table-header d-flex justify-content-between flex-row align-items-center">
-            <span class="p-input-icon-left">
-              <i class="fa-solid fa-search"></i>
-              <input
-                pInputText
-                type="text"
-                (input)="dt.filterGlobal($any($event.target).value, 'contains')"
-                placeholder="Tìm kiếm"
-              />
-            </span>
-      </div>
-    </ng-template>
-    <ng-template pTemplate="header">
-      <tr>
-        <th class="th-id">
-          <div>STT</div>
-        </th>
-        <th pSortableColumn="taskName">
+  <div class="card">
+    <p-table
+      #dt
+      *ngIf="taskList"
+      [value]="taskList"
+      dataKey="taskId"
+      [rowHover]="true"
+      [rows]="5"
+      [showCurrentPageReport]="true"
+      [paginator]="true"
+      currentPageReportTemplate="Hiển thị từ {first} tới {last} trên tổng {totalRecords} bản ghi"
+      [filterDelay]="0"
+      [globalFilterFields]="['taskName']"
+    >
+      <ng-template pTemplate="caption">
+        <div
+          class="table-header d-flex justify-content-between flex-row align-items-center"
+        >
+          <span class="p-input-icon-left">
+            <i class="fa-solid fa-search"></i>
+            <input
+              class="search-input"
+              pInputText
+              type="text"
+              (input)="dt.filterGlobal($any($event.target).value, 'contains')"
+              placeholder="Tra cứu theo tên công việc"
+            />
+          </span>
           <div>
-            Tên
-            <p-sortIcon field="taskName"></p-sortIcon>
-          </div>
-        </th>
-        <th pSortableColumn="assigneeName">
-          <div>
-            Người thực hiện
-            <p-sortIcon field="assigneeName"></p-sortIcon>
-          </div>
-        </th>
-        <th pSortableColumn="deadline">
-          <div>
-            Hạn nộp
-            <p-sortIcon field="deadline"></p-sortIcon>
-          </div>
-        </th>
-        <th class="th-small"></th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-taskList >
-      <tr class="p-selectable-row">
-        <td>
-          <span class="p-column-title">STT</span>
-          {{ taskList.index + 1 }}
-        </td>
-        <td>
-          <span class="p-column-title">Tên</span>
-          {{ taskList.taskName }}
-        </td>
-        <td>
-          <span class="p-column-title">Người thực hiện</span>
-          {{ taskList.assigneeName }}
-        </td>
-        <td>
-          <span class="p-column-title">Ngày nộp</span>
-          {{ taskList.deadline | date: "dd/MM/yyyy" }}
-        </td>
-        <td style="text-align: center"
-            class="d-flex td-action justify-content-center align-items-center action-button">
-          <div class="action-item d-flex justify-content-center align-items-center mx-2">
-            <button type="button" (click)="initDetailRecordData(taskList.taskId)">
-              <i class="bi bi-info-circle-fill"></i>
+            <button
+              pButton
+              (click)="changeFilterVisible(true)"
+              *ngIf="!filterVisible"
+            >
+              Tra cứu nâng cao
+            </button>
+            <button
+              pButton
+              (click)="changeFilterVisible(false)"
+              *ngIf="filterVisible"
+            >
+              Ẩn tra cứu nâng cao
             </button>
           </div>
-        </td>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="8">Không tìm thấy biên bản kiểm tra</td>
-      </tr>
-    </ng-template>
-  </p-table>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="header">
+        <tr *ngIf="filterVisible">
+          <th class="th-id"></th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="taskName"
+              pTooltip="(VD): Công tác quản lý của hiệu trưởng"
+              tooltipPosition="top"
+              placeholder="Tên mục kiểm tra"
+            ></p-columnFilter>
+          </th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="assigneeName"
+              pTooltip="(VD): Nguyễn Văn A"
+              tooltipPosition="top"
+              placeholder="Tên người thực hiện"
+            ></p-columnFilter>
+          </th>
+          <th>
+            <!-- <p-columnFilter
+          type="date"
+
+          ></p-columnFilter> -->
+          </th>
+          <th class="th-small"></th>
+        </tr>
+        <tr>
+          <th class="th-id">
+            <div>STT</div>
+          </th>
+          <th pSortableColumn="taskName">
+            <div>
+              Tên
+              <p-sortIcon field="taskName"></p-sortIcon>
+            </div>
+          </th>
+          <th pSortableColumn="assigneeName">
+            <div>
+              Người thực hiện
+              <p-sortIcon field="assigneeName"></p-sortIcon>
+            </div>
+          </th>
+          <th pSortableColumn="deadline">
+            <div>
+              Hạn nộp
+              <p-sortIcon field="deadline"></p-sortIcon>
+            </div>
+          </th>
+          <th class="th-small"></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-taskList>
+        <tr class="p-selectable-row">
+          <td>
+            <span class="p-column-title">STT</span>
+            {{ taskList.index + 1 }}
+          </td>
+          <td>
+            <span class="p-column-title">Tên</span>
+            {{ taskList.taskName }}
+          </td>
+          <td>
+            <span class="p-column-title">Người thực hiện</span>
+            {{ taskList.assigneeName }}
+          </td>
+          <td>
+            <span class="p-column-title">Ngày nộp</span>
+            {{ taskList.deadline | date : "dd/MM/yyyy" }}
+          </td>
+          <td
+            style="text-align: center"
+            class="d-flex td-action justify-content-center align-items-center action-button"
+          >
+            <div
+              class="action-item d-flex justify-content-center align-items-center mx-2"
+            >
+              <button
+                type="button"
+                (click)="initDetailRecordData(taskList.taskId)"
+              >
+                <i class="bi bi-info-circle-fill"></i>
+              </button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="5">Không tìm thấy biên bản kiểm tra</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
