--- a/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.scss
+++ b/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.scss
@@ -1,21 +1,79 @@
 @import "../../../../../assets/scss/base";
-*{
+* {
   font-size: 16px;
 }
 
-.th-small{
-  width: 30px;
+.th-small {
+  width: 100px;
 }
-
-.action-button{
-  button{
-    width: 30px;
-    height: 30px;
+.p-button {
+  background-color: $primary;
+  border-radius: 8px;
+  border: solid 1px $primary;
+  transition: all 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.action-button {
+  button {
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     border: none;
     background: $primary;
-    i{
+    transition: all 0.5s ease;
+    i {
+      color: white;
+    }
+    &:hover {
+      background-color: $primary-hover;
+    }
+  }
+}
+:host ::ng-deep {
+  .th-id {
+    width: 80px;
+  }
+  // for icon sort
+  .p-highlight {
+    .p-sortable-column-icon {
+      color: $primary;
+    }
+  }
+  // for active th
+  .p-highlight {
+    div {
+      color: $primary;
+    }
+    .p-dropdown-item {
       color: white;
     }
   }
+  // FILTER ICON
+  .p-column-filter-menu-button-active {
+    border-radius: 50%;
+    // background-color: #cfd3ff;
+    background-color: $primary;
+    color: #fff;
+  }
+  .p-column-filter-clear-button,
+  .p-column-filter-menu-button {
+    border-radius: 50%;
+  }
+  .p-paginator .p-paginator-pages .p-paginator-page {
+    border-radius: 50%;
+    &.p-highlight {
+      background-color: $primary-hover !important;
+      color: #fff !important;
+    }
+  }
+  table {
+    table-layout: fixed;
+    width: 100%;
+  }
+}
+
+.search-input {
+  width: 300px;
 }
