--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
@@ -162,7 +162,7 @@ textarea {
         text-overflow: ellipsis; /* Display ellipsis for overflowing text */
     }
     .th-id {
-        width: 60px;
+        width: 80px;
     }
     // for icon sort
     .p-highlight {
@@ -197,5 +197,11 @@ textarea {
     .p-column-filter-clear-button,
     .p-column-filter-menu-button {
         border-radius: 50%;
+    }
+    .p-checkbox .p-checkbox-box {
+        border-color: $primary-hover;
+        &.p-highlight {
+            background-color: $primary-hover;
+        }
     }
 }
